--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immutability-helper": "^2.8.1",
+    "lodash.flow": "^3.5.0",
     "node-sass": "^4.9.4",
     "react": "^16.5.2",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5"
   },
